<resources>
    <string name="app_name">lr3</string>
    <string name="next">Next</string>
    <string name="age">Age</string>
    <string name="second_name">Second name</string>
    <string name="first_name">First name</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="back">Back</string>
    <string name="mark">Mark</string>
    <string name="university">University:</string>
    <string name="listener">Listener</string>
    <string name="main">Main</string>
    <string name="organisation">Organisation</string>
    <string name="save">Save</string>
    <string name="first_name1">First name:</string>
    <string name="second_name1">Second name:</string>
    <string name="age1">Age:</string>
    <string name="organisation1">Organisation:</string>
    <string name="mark1">"Mark: "</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="social">Social Network</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">Submit</string>

</resources>