<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:rowCount="3"
        android:columnCount="2">

        <EditText
            android:id="@+id/mark"
            style="@style/MarginStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:ems="10"
            android:hint="@string/mark"
            android:inputType="number" />

        <LinearLayout
            style="@style/MarginStyle"
            android:layout_row="1"
            android:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/university"
                android:layout_marginLeft="4dp"/>

            <Spinner
                android:id="@+id/university"
                android:layout_width="match_parent"
                android:layout_height="36dp" />

        </LinearLayout>

        <Button
            android:onClick="onClickBackButton"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/back"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/next" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>