<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="2"
        android:columnCount="2">

        <LinearLayout
            style="@style/MarginStyle"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name1"/>
                <TextView
                    android:id="@+id/firstNameTextView"
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondNameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_name1"/>
                <TextView
                    android:id="@+id/secondNameTextView"
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age1"/>
                <TextView
                    android:id="@+id/ageTextView"
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/organisationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organisation1"/>
                <TextView
                    android:id="@+id/organisationTextView"
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/universityLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/university"/>
                <TextView
                    android:id="@+id/universityTextView"
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/markLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mark1"/>
                <TextView
                    android:id="@+id/markTextView"
                    style="@style/MarginStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:onClick="onClickBackButton"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_columnWeight="1"
            android:text="@string/back"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/save" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>